# pulumi-hyperv

./: .ci-mgmt.yaml  .gitattributes  .gitignore  .goreleaser.prerelease.yml  .goreleaser.yml  .markdownlint.json  .pulumi.version  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  fixed-unknown-type-issue.md  make.ps1  setup-datacenter-server.ps1
.github/.workflows-linux/: build.txt  build.txt2  command-dispatch.txt  prerelease.txt  pull-request.txt  run-acceptance-tests.txt  runner-test.txt
.github/workflows/: build-windows.yml  build.yml  command-dispatch.yml  prerelease.yml  pull-request.yml  regenerate-sdks.yml  release.yml  run-acceptance-tests-windows.yml  run-acceptance-tests.yml  runner-test.yml  todo.yml  weekly-pulumi-update.yml  windows-test.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: _index.md  installation-configuration.md
examples/: examples_go_test.go  examples_nodejs_test.go  examples_test.go  go.mod  go.sum
provider/: go.mod  go.sum
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_hyperv/: __init__.py  provider.py
sdk/python/pulumi_hyperv/config/: __init__.pyi  vars.py
sdk/python/pulumi_hyperv/machine/: __init__.py  _inputs.py  machine.py  outputs.py
sdk/python/pulumi_hyperv/networkadapter/: __init__.py  _inputs.py  network_adapter.py  outputs.py
sdk/python/pulumi_hyperv/vhdfile/: __init__.py  vhd_file.py
sdk/python/pulumi_hyperv/virtualswitch/: __init__.py  virtual_switch.py
sdk/python/pulumi_hyperv/vm/: __init__.py  vm.py
(+141 files in other folders)
